+ Allow Sprinting to No Slow.
+ Amount to Notifications.
+ Speed to Phase.
+ No Clip Phase.
+ NCP Low Speed.
+ Move Tower to Scaffold.
+ Normal2 Rotations to Scaffold.
+ Ticks Velocity.
+ Matrix Tower to Scaffold.
+ Vulcan Criticals.
+ Jump to Collide Flight.
+ Omni Sprint Disabler.
+ Health to Auto Pot.
+ Has Armor to Anti Bot.
+ Incognito to Flight.
+ Greycliff font to Hud Settings.
+ cooler spin in Animations.
+ Matrix Jesus.

/ Made Config System a bit better.
/ Improved Notification System.
/ Fixed modules moving random places in Click Gui.
/ Changed ClickGui Category Icons.
/ Fixed a few Main Menu and Alt Manager visuals.
/ Separated Auto Pot from Auto Heal.
/ Mostly fixed Inventory Manager.
/ Un-patched and improved Vulcan Long Jump.
/ Made settings hide if not used for Panel Gui.
/ Improved Auto Pot for Instant Health potions.
/ Animations to Target Hud.
/ Improved Block Counter Module.
/ Recoded Enabled Modules.
/ Renamed Spin animations to Astolfo.
/ Renamed Geuxy animations to Flat.
/ Improved Kill Aura.

- Position Flight.

 Added Fences.
 Added No Jump Delay.