@@ -28,9 +28,9 @@ public class Client {
 	public String getName() {
 		return "Rapid";
 	}
-	
+
 	public String getVersion() {
-		return "1.5.1";
+		return "1.6";
 	}
 
 }
